Commited on Saturday Evening.

--- a/lims_portal/lims_app/templates/home.html
+++ b/lims_portal/lims_app/templates/home.html
@@ -9,8 +9,8 @@
         <img src="{% static '/arilogo.ico' %}" class="rounded float-start"  alt="ATZ" height="200" style="margin-right: 200px;"> 
         <h1 class="display-4">Hello, Management</h1>
         <p>Welcome to ATZ library. This is where you manage the books and readers details.</p>
-        <p><a role="button" href="#" class="btn btn-primary btn-lg">Connect more readers >></a></p>
-      
+        <p><a role="button" href="../../welcome" class="btn btn-primary btn-lg">Go to resources >></a></p>
+        
     </div>
 </div>
 <div class="container">
