--- a/lims_portal/lims_app/templates/registration/login.html
+++ b/lims_portal/lims_app/templates/registration/login.html
@@ -22,6 +22,16 @@
         <div class="col">
             <nav class="navbar bg-body-light">
                <div class="container-fluid justify-content-center align-items-center">
+                {% for msg in messages%}
+                
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                  <strong>{{msg}}</strong> 
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                
+                
+                                {% endfor %}
+
                 <form class="d-flex" role="search" action="" method="POST">
                     {% csrf_token %}
                                         
