--- a/lims_portal/lims_app/templates/index_userslogin.html
+++ b/lims_portal/lims_app/templates/index_userslogin.html
@@ -5,7 +5,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Library Management Information System</title>
+     <title>Library Management Information System</title>
+     <link rel="icon" href="static/images/ari-icon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
       .jambotron{
@@ -32,45 +33,9 @@
           <img src="{% static '/arilogo.ico' %}" alt="ATZ" height="45" style="margin-right: 10px;"> ATZ Library</span>
       </div>
     </nav>
-<!--
-  <div class="justify-content-center container-fluid align-items-center ">
-    <ul class="nav nav-tabs justify-content-center">
-   
-      <li class="nav-item ">
-        {% if current_tab == home %}
-         <a class="nav-link active" aria-current="page" href="">HOME</a>
-        {% else %}
-         <a class="nav-link" aria-current="page" href="">HOME</a>
-        {% endif %}
-      </li>
-      <li class="nav-item">
-        {% if current_tab == readers %}
-         <a class="nav-link active" aria-current="page" href="">READERS</a>
-        {% else %}
-         <a class="nav-link" aria-current="page" href="">READERS</a>
-        {% endif %}
-      </li>
-      <li class="nav-item">
-        {% if current_tab == books %}
-         <a class="nav-link active" aria-current="page" href="">BOOKS</a>
-        {% else %}
-         <a class="nav-link" aria-current="page" href="">BOOKS</a>
-        {% endif %}
-      </li>
-      <li class="nav-item">
-        {% if current_tab == issued %}
-         <a class="nav-link active" aria-current="page" href="">ISSUED</a>
-        {% else %}
-         <a class="nav-link" aria-current="page" href="">ISSUED</a>
-        {% endif %}
-      </li>
-      
-      
-      
-    </ul>
-  </div>
--->
-  {% block main_content%}
+     
+                                                                                          
+ {% block main_content%}
   {% endblock %}
   <style>
    
