--- a/lims_portal/lims_app/templates/readers.html
+++ b/lims_portal/lims_app/templates/readers.html
@@ -91,7 +91,7 @@
     </div>
     <div class="row" style="margin-top: 20px;">
     <div class="container" style="overflow-y: auto; height: 400px;">
-        <table class="table table-hover">
+        <table class="table table-hover" style="font-size: small;">
 
             <thead>
                 <tr>
