--- a/lims_portal/lims_app/templates/update_reader.html
+++ b/lims_portal/lims_app/templates/update_reader.html
@@ -18,6 +18,11 @@
                                 
                                 {% csrf_token %}
                                 {{form.as_p}}
+
+                                <div class="toast-body">
+                                   {{msg}}
+                                  </div>
+
                             </div>
                             </div>
                             <div class="row">
